@@ -4,6 +4,13 @@
 
 	* core/Form/PrimitiveString.class.php: '0' is a valid string too.
 
+2008-03-31	Konstantin V. Arkhipov
+
+	* test/core/PrimitiveDateTest.class.php: synced with reality.
+
+	* core/Base/Time.class.php: several fixes for parsing issues were
+	backported from trunk.
+
 2008-03-27	Konstantin V. Arkhipov
 
 	* main/Utils/HeaderUtils.class.php: redirect() removed, finally.
